[Shuwen & Songbai] Read data from plist.

--- a/ARTechRadar/Resource/RadarData.plist
+++ b/ARTechRadar/Resource/RadarData.plist
@@ -21,5 +21,138 @@
 			<integer>0</integer>
 		</dict>
 	</dict>
+	<dict>
+		<key>Name</key>
+		<string>Polycloud</string>
+		<key>Number</key>
+		<integer>1</integer>
+		<key>Description</key>
+		<string>abc</string>
+		<key>Level</key>
+		<string>ASSESS</string>
+		<key>Quadrant</key>
+		<string>Techniques</string>
+		<key>Position</key>
+		<dict>
+			<key>X</key>
+			<real>-0.1</real>
+			<key>Z</key>
+			<real>0.05</real>
+		</dict>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>fastlane</string>
+		<key>Number</key>
+		<integer>0</integer>
+		<key>Description</key>
+		<string>abc</string>
+		<key>Level</key>
+		<string>ADOPT</string>
+		<key>Quadrant</key>
+		<string>Tools</string>
+		<key>Position</key>
+		<dict>
+			<key>X</key>
+			<real>0.03</real>
+			<key>Z</key>
+			<real>0.03</real>
+		</dict>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>Flow</string>
+		<key>Number</key>
+		<integer>0</integer>
+		<key>Description</key>
+		<string>abc</string>
+		<key>Level</key>
+		<string>ASSESS</string>
+		<key>Quadrant</key>
+		<string>Tools</string>
+		<key>Position</key>
+		<dict>
+			<key>X</key>
+			<real>0.05</real>
+			<key>Z</key>
+			<real>0.1</real>
+		</dict>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>Swift</string>
+		<key>Number</key>
+		<integer>0</integer>
+		<key>Description</key>
+		<string>abc</string>
+		<key>Level</key>
+		<string>HOLD</string>
+		<key>Quadrant</key>
+		<string>Techniques</string>
+		<key>Position</key>
+		<dict>
+			<key>X</key>
+			<integer>0</integer>
+			<key>Z</key>
+			<integer>0</integer>
+		</dict>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>Swift</string>
+		<key>Number</key>
+		<integer>0</integer>
+		<key>Description</key>
+		<string>abc</string>
+		<key>Level</key>
+		<string>HOLD</string>
+		<key>Quadrant</key>
+		<string>Techniques</string>
+		<key>Position</key>
+		<dict>
+			<key>X</key>
+			<integer>0</integer>
+			<key>Z</key>
+			<integer>0</integer>
+		</dict>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>Swift</string>
+		<key>Number</key>
+		<integer>0</integer>
+		<key>Description</key>
+		<string>abc</string>
+		<key>Level</key>
+		<string>HOLD</string>
+		<key>Quadrant</key>
+		<string>Techniques</string>
+		<key>Position</key>
+		<dict>
+			<key>X</key>
+			<integer>0</integer>
+			<key>Z</key>
+			<integer>0</integer>
+		</dict>
+	</dict>
+	<dict>
+		<key>Name</key>
+		<string>Swift</string>
+		<key>Number</key>
+		<integer>0</integer>
+		<key>Description</key>
+		<string>abc</string>
+		<key>Level</key>
+		<string>HOLD</string>
+		<key>Quadrant</key>
+		<string>Techniques</string>
+		<key>Position</key>
+		<dict>
+			<key>X</key>
+			<integer>0</integer>
+			<key>Z</key>
+			<integer>0</integer>
+		</dict>
+	</dict>
 </array>
 </plist>
