--- a/ARTechRadar/Info.plist
+++ b/ARTechRadar/Info.plist
@@ -27,6 +27,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Regular.ttf</string>
+		<string>OpenSans-Light.ttf</string>
 		<string>OpenSans-SemiBold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
