--- a/ARTechRadar/Info.plist
+++ b/ARTechRadar/Info.plist
@@ -39,6 +39,8 @@
 		<string>armv7</string>
 		<string>arkit</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
