[Shuwen] add radar dot position.

--- a/ARTechRadar/Resource/RadarData.plist
+++ b/ARTechRadar/Resource/RadarData.plist
@@ -35,9 +35,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.1</real>
+			<real>-0.23</real>
 			<key>Z</key>
-			<real>-0.02</real>
+			<real>-0.03</real>
 		</dict>
 	</dict>
 	<dict>
@@ -54,9 +54,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.12</real>
+			<real>-0.2</real>
 			<key>Z</key>
-			<real>-0.02</real>
+			<real>-0.06</real>
 		</dict>
 	</dict>
 	<dict>
@@ -73,9 +73,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.15</real>
+			<real>-0.21</real>
 			<key>Z</key>
-			<real>-0.02</real>
+			<real>-0.1</real>
 		</dict>
 	</dict>
 	<dict>
@@ -92,9 +92,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.17</real>
+			<real>-0.18</real>
 			<key>Z</key>
-			<real>-0.05</real>
+			<real>-0.12</real>
 		</dict>
 	</dict>
 	<dict>
@@ -111,9 +111,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.19</real>
+			<real>-0.16</real>
 			<key>Z</key>
-			<real>-0.08</real>
+			<real>-0.18</real>
 		</dict>
 	</dict>
 	<dict>
@@ -130,9 +130,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.18</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.28</real>
 		</dict>
 	</dict>
 	<dict>
@@ -149,9 +149,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.15</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.22</real>
 		</dict>
 	</dict>
 	<dict>
@@ -168,9 +168,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.1</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.3</real>
 		</dict>
 	</dict>
 	<dict>
@@ -187,9 +187,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.05</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.28</real>
 		</dict>
 	</dict>
 	<dict>
@@ -206,9 +206,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.3</real>
+			<real>-0.42</real>
 			<key>Z</key>
-			<real>-0.4</real>
+			<real>-0.04</real>
 		</dict>
 	</dict>
 	<dict>
@@ -225,9 +225,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.43</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.08</real>
 		</dict>
 	</dict>
 	<dict>
@@ -244,9 +244,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.4</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.15</real>
 		</dict>
 	</dict>
 	<dict>
@@ -263,9 +263,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.39</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.19</real>
 		</dict>
 	</dict>
 	<dict>
@@ -282,9 +282,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.37</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.23</real>
 		</dict>
 	</dict>
 	<dict>
@@ -301,9 +301,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.32</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.25</real>
 		</dict>
 	</dict>
 	<dict>
@@ -320,9 +320,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.23</real>
+			<real>-0.3</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.32</real>
 		</dict>
 	</dict>
 	<dict>
@@ -339,9 +339,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.28</real>
+			<real>-0.25</real>
 			<key>Z</key>
-			<real>-0.28</real>
+			<real>-0.36</real>
 		</dict>
 	</dict>
 	<dict>
@@ -358,9 +358,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.28</real>
+			<real>-0.2</real>
 			<key>Z</key>
-			<real>-0.28</real>
+			<real>-0.38</real>
 		</dict>
 	</dict>
 	<dict>
@@ -377,9 +377,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.28</real>
+			<real>-0.16</real>
 			<key>Z</key>
-			<real>-0.28</real>
+			<real>-0.4</real>
 		</dict>
 	</dict>
 	<dict>
@@ -396,9 +396,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.28</real>
+			<real>-0.15</real>
 			<key>Z</key>
-			<real>-0.28</real>
+			<real>-0.46</real>
 		</dict>
 	</dict>
 	<dict>
@@ -415,9 +415,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.35</real>
+			<real>-0.05</real>
 			<key>Z</key>
-			<real>-0.35</real>
+			<real>-0.43</real>
 		</dict>
 	</dict>
 	<dict>
@@ -434,9 +434,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.35</real>
+			<real>-0.49</real>
 			<key>Z</key>
-			<real>-0.35</real>
+			<real>-0.25</real>
 		</dict>
 	</dict>
 	<dict>
@@ -453,9 +453,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.35</real>
+			<real>-0.28</real>
 			<key>Z</key>
-			<real>-0.35</real>
+			<real>-0.47</real>
 		</dict>
 	</dict>
 	<dict>
@@ -472,9 +472,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.08</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.04</real>
 		</dict>
 	</dict>
 	<dict>
@@ -491,9 +491,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.05</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.08</real>
 		</dict>
 	</dict>
 	<dict>
@@ -510,9 +510,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.22</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.05</real>
 		</dict>
 	</dict>
 	<dict>
@@ -529,7 +529,7 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.33</real>
 			<key>Z</key>
 			<real>0.1</real>
 		</dict>
@@ -548,16 +548,16 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.27</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.15</real>
 		</dict>
 	</dict>
 	<dict>
 		<key>Name</key>
 		<string>Flood IO</string>
 		<key>Number</key>
-		<integer>31</integer>
+		<integer>30</integer>
 		<key>Description</key>
 		<string>Load testing became easier with the maturity of tools such as Gatling and Locust. At the same time, elastic cloud infrastructures make it possible to simulate a large number of client instances. We&apos;re delighted to see Flood and other cloud platforms go further by leveraging these technologies. Flood IO is an SaaS load-testing service that helps to distribute and execute testing scripts across hundreds of servers in the cloud. Our teams find it simple to migrate performance testing to Flood by reusing existing Gatling scripts.</string>
 		<key>Level</key>
@@ -567,9 +567,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.228</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.22</real>
 		</dict>
 	</dict>
 	<dict>
@@ -586,9 +586,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.16</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.18</real>
 		</dict>
 	</dict>
 	<dict>
@@ -605,9 +605,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.18</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.3</real>
 		</dict>
 	</dict>
 	<dict>
@@ -624,9 +624,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.08</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.23</real>
 		</dict>
 	</dict>
 	<dict>
@@ -643,9 +643,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.2</real>
+			<real>-0.05</real>
 			<key>Z</key>
-			<real>0.1</real>
+			<real>0.3</real>
 		</dict>
 	</dict>
 	<dict>
@@ -662,9 +662,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.42</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.03</real>
 		</dict>
 	</dict>
 	<dict>
@@ -681,9 +681,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.41</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.07000000000000001</real>
 		</dict>
 	</dict>
 	<dict>
@@ -700,9 +700,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.46</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.1</real>
 		</dict>
 	</dict>
 	<dict>
@@ -719,9 +719,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.44</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.15</real>
 		</dict>
 	</dict>
 	<dict>
@@ -738,7 +738,7 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.47</real>
 			<key>Z</key>
 			<real>0.2</real>
 		</dict>
@@ -757,9 +757,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.4</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.22</real>
 		</dict>
 	</dict>
 	<dict>
@@ -776,9 +776,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.37</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.27</real>
 		</dict>
 	</dict>
 	<dict>
@@ -795,9 +795,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.35</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.33</real>
 		</dict>
 	</dict>
 	<dict>
@@ -814,9 +814,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.3</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.35</real>
 		</dict>
 	</dict>
 	<dict>
@@ -833,9 +833,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.3</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.38</real>
 		</dict>
 	</dict>
 	<dict>
@@ -854,7 +854,7 @@
 			<key>X</key>
 			<real>-0.25</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.4</real>
 		</dict>
 	</dict>
 	<dict>
@@ -871,9 +871,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.2</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.42</real>
 		</dict>
 	</dict>
 	<dict>
@@ -890,9 +890,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.17</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.42</real>
 		</dict>
 	</dict>
 	<dict>
@@ -909,9 +909,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.12</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.4</real>
 		</dict>
 	</dict>
 	<dict>
@@ -928,9 +928,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.08</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.47</real>
 		</dict>
 	</dict>
 	<dict>
@@ -947,9 +947,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.03</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.43</real>
 		</dict>
 	</dict>
 	<dict>
@@ -966,9 +966,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>-0.25</real>
+			<real>-0.4</real>
 			<key>Z</key>
-			<real>0.2</real>
+			<real>0.4</real>
 		</dict>
 	</dict>
 	<dict>
@@ -985,9 +985,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>0.2</real>
+			<real>0.03</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.25</real>
 		</dict>
 	</dict>
 	<dict>
@@ -1004,9 +1004,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>0.2</real>
+			<real>0.05</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.3</real>
 		</dict>
 	</dict>
 	<dict>
@@ -1023,9 +1023,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>0.2</real>
+			<real>0.1</real>
 			<key>Z</key>
-			<real>-0.2</real>
+			<real>-0.27</real>
 		</dict>
 	</dict>
 	<dict>
@@ -1498,9 +1498,9 @@
 		<key>Position</key>
 		<dict>
 			<key>X</key>
-			<real>0.3</real>
+			<real>0.42</real>
 			<key>Z</key>
-			<real>-0.1</real>
+			<real>-0.03</real>
 		</dict>
 	</dict>
 	<dict>
